--- a/TP2.ipynb
+++ b/TP2.ipynb
@@ -61,7 +61,7 @@
    "outputs": [],
    "source": [
     "def w0(x, a=-2.5, b=2.5):\n",
-    "    return np.where((x>=a) & (x<=b), 1, 0)"
+    "    return np.where((x>=a) & (x<=b), 1, 0) "
    ]
   },
   {
@@ -295,12 +295,12 @@
     "\n",
     "$$L^2\\left(\\left[0, 2\\pi\\right]^d\\right) = \\left\\{ f, \\int_{0}^{2\\pi} \\left|f(x)\\right|^2 dx < +\\infty \\right\\}$$ \n",
     "\n",
-    "$$H^{1}_{per}\\left(\\left[0, 2\\pi\\right]\\right) = \n",
+    "$$H^{m}_{per}\\left(\\left[0, 2\\pi\\right]\\right) = \n",
     "\\left\\{ \n",
     "f \\in L^2\\left(\\left[0, 2\\pi\\right]\\right), \\sum_{k \\in \\mathbb{z}} \\left(1 + k^{2}\\right)^m \\left|c_{k}(f)\\right|^2 < +\\infty \n",
     "\\right\\}$$\n",
     "\n",
-    "$$H^{2}_{per}\\left(\\left[0, 2\\pi\\right]^2\\right) = \n",
+    "$$H^{m}_{per}\\left(\\left[0, 2\\pi\\right]^2\\right) = \n",
     "\\left\\{ \n",
     "f \\in L^2\\left(\\left[0, 2\\pi\\right]^2\\right), \\sum_{k, l \\in \\mathbb{z}} \\left(1 + k^{2} + l^{2}\\right)^m \\left|c_{k,l}(f)\\right|^2 < +\\infty \n",
     "\\right\\}$$"
@@ -313,6 +313,20 @@
     "On veut constuire des fonctions $f_{i}$ dont les coefficients de Fourier vérifient :\n",
     "$$\\left|c_{k}\\left(f_{i}\\right)\\right| = \\left(1 + k^{2}\\right)^{-\\alpha/2} \\text{ en dimension 1}$$\n",
     "$$\\left|c_{k, l}\\left(f_{i}\\right)\\right| = \\left(1 + k^{2} + l^{2}\\right)^{-\\alpha/2} \\text{ en dimension 2}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En cherchant $f_{2}$ telle que $f_{2} \\in H^{1}([0, 2\\pi]^{d}) \\text{ et} \\notin H^{2}([0, 2\\pi]^{d})$, on obtient :\n",
+    "\n",
+    "$$\n",
+    "\\sum_{k \\in \\mathbb{z}} \\left(1 + k^{2}\\right)^m \\left|c_{k}(f)\\right|^2 < +\\infty \n",
+    "\n",
+    "\\sum_{k, l \\in \\mathbb{z}} \\left(1 + k^{2} + l^{2}\\right)^m \\left|c_{k,l}(f)\\right|^2 < +\\infty \n",
+    "\n",
+    "$$"
    ]
   },
   {
